--- a/style1.css
+++ b/style1.css
@@ -23,6 +23,13 @@ header {
   display: flex;
   align-items: center;
 }
+.divider {
+  border: none;
+  height: 1px;
+  background: #ffffff;
+  opacity: 0.3;
+  margin: 40px 0;
+}
 
 .brand img {
   width: 55px;
@@ -69,3 +76,4 @@ h2 {
   font-size: 28px;
   margin-bottom: 20px;
   border
+}
